@@ -1,5 +1,6 @@
 Version 3.1.0 beta to be released
 =================================
+BUG: Ticket#492 - TDataGridPagerStyle not found error (Qiang)
 BUG: Ticket#517 - Quickstart I18N sample: conflicting module ID (Wei)
 BUG: Ticket#521 - comment tag on TActiveButton stop callback (Wei)
 BUG: TXmlElement did not encode attribute and text values when being saved as a string (Qiang)
